Updates from Overleaf

--- a/IVOA-IAM.tex
+++ b/IVOA-IAM.tex
@@ -8,7 +8,7 @@
   identifierstyle=\texttt,defaultdialect=[latex]tex,language=tex}
 
 
-\title{IVOA Interoperable Authentication Process}
+\title{IVOA Interoperable Authentication Process \\ for non browser clients}
 
 \ivoagroup{http://www.ivoa.net/twiki/bin/view/IVOA/IvoaGridAndWebServices}
 
